dim/spec/test_input/invalid_attributes/invalid_type.dim
cluster:
  type: multiple
  default: ''
necessary:
  type: single
  default: ''
  allowed:
    -
    - true
    - false
